<resources>
    <string name="app_name">BuyUai.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">VjbcUG8HqiA5A01RhpZQ1rruKWmIpYpFERifOOHk</string>
    <string name="parse_client_key">AB7BilfqCQdzxvnHWHoJy2JujGhOx4ognrYgGf21</string>

    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_again">Confirma senha</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">informe seu usuário</string>
    <string name="error_blank_password">informa sua senha</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", e "</string>
    <string name="error_end">.</string>
    <string name="title_activity_lista_usuario">Lista de Usuários</string>
    <string name="title_activity_asdf">asdf</string>
    <string name="title_activity_login_or_signup">Login Or Signup</string>
    <string name="title_activity_signup">Signup Activity</string>
    <string name="title_activity_feed">Feed</string>

    <string name="toggle">Toggle View</string>
    <string name="title_activity_perfil_usuario">Perfil do Usuário</string>

    <string name="one">ONE</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>

    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="facebook_app_id">1045621708814569</string>
    <string name="title_activity_my_application">MyApplication</string>

    <string name="title_section1">R n B</string>
    <string name="title_section2">Reggae</string>
    <string name="title_section3">Rap</string>

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
